// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supermind settings should load data and render correctly 1`] = `
<View>
  <View
    style={
      {
        "zIndex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={9.333333333333332}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 28,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 28,
                    },
                  ]
                }
              >
                <MaterialCommunityIcons
                  color="#AEB0B8"
                  name="chevron-left"
                  size={28}
                  style={{}}
                />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_700Bold",
              },
              {
                "fontSize": 24,
                "lineHeight": 32,
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          Supermind
        </Text>
      </View>
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "stretch",
            }
          }
          testID="save"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 100,
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                {
                  "borderColor": "transparent",
                  "borderRadius": 4,
                },
                {
                  "minHeight": 42,
                  "paddingHorizontal": 24,
                  "paddingVertical": 2,
                },
                undefined,
                {
                  "borderRadius": 0,
                  "minHeight": 32,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "borderColor": "transparent",
                  "borderRadius": 100,
                  "borderWidth": 1,
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "transform": [
                      {
                        "scale": 0,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  color="#F2F2F2"
                  size="small"
                />
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgba(0, 0, 0, 0.05)",
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFD048",
                    },
                    {
                      "fontFamily": "Roboto_500Medium",
                    },
                    {
                      "fontSize": 18,
                      "lineHeight": 24,
                    },
                    {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "marginHorizontal": 16,
          }
        }
      >
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginVertical": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#a1a5ab",
                },
                {
                  "fontFamily": "Roboto_500Medium",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Get paid to reply to your fans.
          </Text>
        </View>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginVertical": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F2F2F2",
                },
                {
                  "fontFamily": "Roboto_400Regular",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Set your minimum offer amount
          </Text>
        </View>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#b9bbc0",
                },
                {
                  "fontFamily": "Roboto_400Regular",
                },
                {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Fans can’t send you Supermind offers for less than your minimum offer amount.
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "justifyContent": "center",
            "minHeight": 100,
          }
        }
      >
        <ActivityIndicator
          color="#FFD048"
          size="large"
        />
      </View>
      <ActivityIndicator
        color="#b9bbc0"
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`Supermind settings should load data and render correctly 2`] = `
<View>
  <View
    style={
      {
        "zIndex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={9.333333333333332}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 28,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 28,
                    },
                  ]
                }
              >
                <MaterialCommunityIcons
                  color="#AEB0B8"
                  name="chevron-left"
                  size={28}
                  style={{}}
                />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_700Bold",
              },
              {
                "fontSize": 24,
                "lineHeight": 32,
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          Supermind
        </Text>
      </View>
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "stretch",
            }
          }
          testID="save"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 100,
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                {
                  "borderColor": "transparent",
                  "borderRadius": 4,
                },
                {
                  "minHeight": 42,
                  "paddingHorizontal": 24,
                  "paddingVertical": 2,
                },
                undefined,
                {
                  "borderRadius": 0,
                  "minHeight": 32,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "borderColor": "transparent",
                  "borderRadius": 100,
                  "borderWidth": 1,
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "transform": [
                      {
                        "scale": 0,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  color="#F2F2F2"
                  size="small"
                />
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgba(0, 0, 0, 0.05)",
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFD048",
                    },
                    {
                      "fontFamily": "Roboto_500Medium",
                    },
                    {
                      "fontSize": 18,
                      "lineHeight": 24,
                    },
                    {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "marginHorizontal": 16,
          }
        }
      >
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginVertical": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#a1a5ab",
                },
                {
                  "fontFamily": "Roboto_500Medium",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Get paid to reply to your fans.
          </Text>
        </View>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginVertical": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F2F2F2",
                },
                {
                  "fontFamily": "Roboto_400Regular",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Set your minimum offer amount
          </Text>
        </View>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#b9bbc0",
                },
                {
                  "fontFamily": "Roboto_400Regular",
                },
                {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Fans can’t send you Supermind offers for less than your minimum offer amount.
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "paddingHorizontal": 16,
            },
            {
              "paddingTop": 8,
            },
            {
              "backgroundColor": "#1C1D1F",
            },
            {
              "borderTopWidth": 1,
            },
            null,
            {
              "borderColor": "#53565A",
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              {
                "paddingBottom": 10,
                "paddingTop": 5,
              }
            }
          >
            <View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#F2F2F2",
                      },
                      {
                        "fontFamily": "Roboto_400Regular",
                      },
                      [
                        {
                          "fontFamily": "Roboto_400Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "marginBottom": 0,
                        },
                        {
                          "color": "#b9bbc0",
                        },
                        [
                          {
                            "color": "#b9bbc0",
                          },
                          {
                            "fontSize": 16,
                          },
                          {
                            "paddingLeft": 1,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Tokens
                </Text>
              </View>
            </View>
            <TextInput
              autoCapitalize="none"
              autoFocus={true}
              error=""
              keyboardAppearance="dark"
              keyboardType="numeric"
              labelStyle={
                [
                  {
                    "color": "#b9bbc0",
                  },
                  {
                    "fontSize": 16,
                  },
                  {
                    "paddingLeft": 1,
                  },
                  undefined,
                ]
              }
              onChangeText={[Function]}
              placeholderTextColor="#a1a5ab"
              returnKeyType="done"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderColor": "#53565A",
                    "borderRadius": 2,
                    "borderWidth": 1,
                    "color": "#F2F2F2",
                    "fontFamily": "Roboto_400Regular",
                    "fontSize": 16,
                    "lineHeight": 21,
                  },
                  [
                    {
                      "borderWidth": 0,
                      "marginBottom": 7,
                      "paddingHorizontal": 0,
                      "paddingVertical": 6,
                    },
                    {
                      "paddingLeft": 1,
                    },
                    {
                      "fontSize": 18,
                    },
                    {
                      "color": "#F2F2F2",
                    },
                    undefined,
                  ],
                ]
              }
              testID="tokensInput"
              underlineColorAndroid="transparent"
              value="2"
            />
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "paddingHorizontal": 16,
            },
            {
              "paddingTop": 8,
            },
            {
              "backgroundColor": "#1C1D1F",
            },
            {
              "borderTopWidth": 1,
            },
            {
              "borderBottomWidth": 1,
            },
            {
              "borderColor": "#53565A",
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              {
                "paddingBottom": 10,
                "paddingTop": 5,
              }
            }
          >
            <View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#F2F2F2",
                      },
                      {
                        "fontFamily": "Roboto_400Regular",
                      },
                      [
                        {
                          "fontFamily": "Roboto_400Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "marginBottom": 0,
                        },
                        {
                          "color": "#b9bbc0",
                        },
                        [
                          {
                            "color": "#b9bbc0",
                          },
                          {
                            "fontSize": 16,
                          },
                          {
                            "paddingLeft": 1,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  USD
                </Text>
              </View>
            </View>
            <TextInput
              autoCapitalize="none"
              error=""
              keyboardAppearance="dark"
              keyboardType="numeric"
              labelStyle={
                [
                  {
                    "color": "#b9bbc0",
                  },
                  {
                    "fontSize": 16,
                  },
                  {
                    "paddingLeft": 1,
                  },
                  undefined,
                ]
              }
              onChangeText={[Function]}
              placeholderTextColor="#a1a5ab"
              returnKeyType="done"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderColor": "#53565A",
                    "borderRadius": 2,
                    "borderWidth": 1,
                    "color": "#F2F2F2",
                    "fontFamily": "Roboto_400Regular",
                    "fontSize": 16,
                    "lineHeight": 21,
                  },
                  [
                    {
                      "borderWidth": 0,
                      "marginBottom": 7,
                      "paddingHorizontal": 0,
                      "paddingVertical": 6,
                    },
                    {
                      "paddingLeft": 1,
                    },
                    {
                      "fontSize": 18,
                    },
                    {
                      "color": "#F2F2F2",
                    },
                    undefined,
                  ],
                ]
              }
              testID="cashInput"
              underlineColorAndroid="transparent"
              value="12"
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "column",
            "paddingBottom": 16,
            "paddingHorizontal": 16,
            "paddingTop": 12,
          }
        }
      >
        <View
          onPress={[Function]}
          style={
            [
              {
                "flexDirection": "row",
                "justifyContent": "center",
              },
              {
                "alignContent": "center",
                "alignItems": "center",
                "alignSelf": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#1C1D1F",
                "borderColor": "#FFD048",
                "borderRadius": 21,
                "borderWidth": 1,
                "paddingHorizontal": 21,
                "paddingVertical": 10,
              },
              undefined,
            ]
          }
          testID="StripeConnectButton"
          text="Update Your Details"
        >
          <Text
            onLayout={[Function]}
            style={
              [
                {
                  "color": "#F2F2F2",
                },
                {
                  "fontFamily": "Roboto_400Regular",
                },
                [
                  {
                    "fontSize": 17,
                  },
                  {
                    "color": "#F2F2F2",
                  },
                  undefined,
                  {
                    "fontWeight": "500",
                  },
                ],
              ]
            }
          >
             
            Update Your Details
             
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Supermind settings should update the store and submit 1`] = `
<View>
  <View
    style={
      {
        "zIndex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={9.333333333333332}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 28,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 28,
                    },
                  ]
                }
              >
                <MaterialCommunityIcons
                  color="#AEB0B8"
                  name="chevron-left"
                  size={28}
                  style={{}}
                />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_700Bold",
              },
              {
                "fontSize": 24,
                "lineHeight": 32,
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          Supermind
        </Text>
      </View>
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "stretch",
            }
          }
          testID="save"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 100,
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                {
                  "borderColor": "transparent",
                  "borderRadius": 4,
                },
                {
                  "minHeight": 42,
                  "paddingHorizontal": 24,
                  "paddingVertical": 2,
                },
                undefined,
                {
                  "borderRadius": 0,
                  "minHeight": 32,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "borderColor": "transparent",
                  "borderRadius": 100,
                  "borderWidth": 1,
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "transform": [
                      {
                        "scale": 0,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  color="#F2F2F2"
                  size="small"
                />
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgba(0, 0, 0, 0.05)",
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFD048",
                    },
                    {
                      "fontFamily": "Roboto_500Medium",
                    },
                    {
                      "fontSize": 18,
                      "lineHeight": 24,
                    },
                    {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "marginHorizontal": 16,
          }
        }
      >
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginVertical": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#a1a5ab",
                },
                {
                  "fontFamily": "Roboto_500Medium",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Get paid to reply to your fans.
          </Text>
        </View>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginVertical": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F2F2F2",
                },
                {
                  "fontFamily": "Roboto_400Regular",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Set your minimum offer amount
          </Text>
        </View>
        <View
          style={
            {
              "alignSelf": "stretch",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#b9bbc0",
                },
                {
                  "fontFamily": "Roboto_400Regular",
                },
                {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Fans can’t send you Supermind offers for less than your minimum offer amount.
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "justifyContent": "center",
            "minHeight": 100,
          }
        }
      >
        <ActivityIndicator
          color="#FFD048"
          size="large"
        />
      </View>
      <ActivityIndicator
        color="#b9bbc0"
      />
    </View>
  </RCTScrollView>
</View>
`;
